--- a/hadoop-demo/pom.xml
+++ b/hadoop-demo/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>hadoop-client</artifactId>
             <version>2.7.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
 
